solved canvas overflow

--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,17 @@
-body, body * {
-    margin: 0;
-    padding: 0;
+body,
+body * {
+	margin: 0;
+	padding: 0;
 }
 
 body {
-    width: 100vw;
-    height: 100vh;
+	width: 100vw;
+	height: 100vh;
+	display: grid;
+	place-content: center;
 }
 
 canvas {
-    width: 100%;
-    height: 100%
+	max-width: 100%;
+	max-height: 100%;
 }
